# FTP-Client

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  client  client.cpp  server  server.cpp
Qt-GUI/: CMakeLists.txt  ftpparse.cpp  ftpparse.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  terminaloutput.h
src/: CMakeLists.txt  Commands.cpp  Commands.h  ControlConnection.cpp  ControlConnection.h  DataConnection.cpp  DataConnection.h  StatusConstants.h  client.cpp  ftp.cpp
